--- a/WebContent/index3.html
+++ b/WebContent/index3.html
@@ -3,6 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <title>드래그테스트</title>
+
+</head>
+<body>
+
+
+
+<section id="section8">
+
 	<style>
 	  .container{
 	  width: 800px;
@@ -17,10 +25,70 @@
 		position: absolute;
 	}
 	</style>
-</head>
-<body>
+	
+	<script>
+	window.addEventListener("load", function(){
+		var section = document.querySelector("#section8");
+		var container = section.querySelector(".container");
+		var box = section.querySelector(".box");
+		var dragging = false;
+		var offset = {x:0, y:0};
+		var current = null;//클릭을 하면 가장 상위에 있는박스가 current가 된다.
+		
+		container.onmousedown = function(e){
+			//박스라는 클래스가 포함되어있느냐?
+			if(e.target.classList.contains("box")){
+				dragging = true; 
+				current = e.target; //현재클릭한 클래스가 이동을 위한 박스가 된다.
+				offset.x = e.offsetX;//선택된 박스에 offset값을 구한다.
+				offset.y = e.offsetY;
+			} 
+				
+		};
+		
+		
 
+		container.onmousemove = function(e){
+			if(!dragging) return;
+			current.style.left = e.pageX-offset.x+"px"; 
+			current.style.top = e.pageY-offset.y+"px";
+		};
+		
+		container.onmouseup = function(e){
+			dragging = false;
+			
+		};
+
+	 });
+	</script>
+	
+	<div class="container">
+		 <div class="box"></div>
+		 <div class="box"></div>
+		 <div class="box"></div>
+	</div>
+</section>
+
+
+
+<!-- 
 <section id="section7">
+
+	<style>
+	  .container{
+	  width: 800px;
+	  height: 400px;
+	  border : 1px solid gray
+	  }
+	
+	.box {
+		width: 100px;
+		height: 100px;
+		background: blue;
+		position: absolute;
+	}
+	</style>
+	
 	<script>
 	window.addEventListener("load", function(){
 		var section = document.querySelector("#section7");
@@ -61,9 +129,8 @@
 		 <div class="box"></div>
 	</div>
 </section>
+ -->
 
-<br><br><br>
-<h6>------------------------------</h6>
 <!-- 
 <section id="section6">
 
