--- a/WebContent/jsBasic/00_jsBasic.html
+++ b/WebContent/jsBasic/00_jsBasic.html
@@ -115,6 +115,22 @@ if(조건){
 }
 
 ### 논리연산자
+||
+&&
+!
+
+조건이 많을때
+첫번째 조건에서 적은 숫자가 포함된 조건을 먼저 찾는것이 좋다..
+처음부터 많은 것들을 걸러낼수있기 때문이다
+
+조건에도 우선순위가 있다.
+
+### 반복문
+for
+while
+do while 일단 코드를 한번 실행한다.. 적어도 한번실행한다는게 while과 다름
+
+
 
 
 
