--- a/WebContent/chart/index.html
+++ b/WebContent/chart/index.html
@@ -117,6 +117,90 @@ var pieData = {
 </script>
 
 
+<hr>
+<div id="abc"></div>
+<!--https://c3js.org/samples/axes_rotated.html-->
+<script>
+var chart = c3.generate({
+	  bindto: "#abc",
+    data: {
+        columns: [
+            ['blue', 7, 7, 7, 7, 7, 7],
+            ['red', 50, 20, 10, 40, 15, 25],
+            ['black', 50, 20, 10, 40, 15, 25]
+        ],
+        type: 'bar',
+        groups: [
+            ['blue', 'red', 'black']
+        ],
+    },
+    axis: {
+        rotated: true,
+        x: {
+            type: 'category',
+            categories: ['test', 'test2', 'test3', 'test4', 'test5', 'test6', 'cat7', 'cat8', 'cat9']
+        }
+    }
+});
+</script>
+
+
+<hr>
+<div id="abc1"></div>
+<!--https://c3js.org/samples/chart_pie.html-->
+<script>
+
+
+var chart = c3.generate({
+    data: {
+        // iris data from R
+        columns: [
+            ['data1', 30],
+            ['data2', 140],
+            ['data3', 110],
+            ['data4', 80],
+        ],
+        type : 'pie',
+    },
+        pie: {
+            label: {
+                format: function (value, ratio, id) {
+                    return d3.format('$')(value);
+                }
+            }
+        }
+
+});
+
+
+</script>
+
+
+
+
+<hr>
+<div id="abc2"></div>
+<!--https://c3js.org/samples/pie_label_format.html-->
+<script>
+var chart = c3.generate({
+	  bindto: "#abc2",
+    data: {
+        columns: [
+            ['data1', 80],
+            ['data2', 100]
+        ],
+        type: 'pie'
+    },
+    pie: {
+        label: {
+            format: function (value, ratio, id) {
+                return d3.format('')(value);
+            }
+        }
+    }
+});
+
+</script>
 
 </body>
 </html>
