--- a/WebContent/jsBasic/00_jsBasic.html
+++ b/WebContent/jsBasic/00_jsBasic.html
@@ -135,9 +135,30 @@ continue;
 
 
 ### switch
+switch(평가){
+caseA:
+//a일때 코드
+caseB:
+//b일때 코드
+}
 
+if문으로 바꿔본다면
+if(평가 ==a){
+}else if(평가 == b){
+}
+와 동일하다
 
+switch문에서는
+default:
+를 사용하면 조건에 하나도 안맞는것이 입력된다면 기본적으로 default를 실행해준다
 
+case 조건1:
+case 조건2:
+break
+
+이런형태로 case가 두게 붙어있다면 조건1이와도 조건 2가와도 하나의 코드가 실행된다.
+
+###함수(function)
 
  -->
 
