--- a/WebContent/jsBasic/00_jsBasic.html
+++ b/WebContent/jsBasic/00_jsBasic.html
@@ -160,7 +160,56 @@ break
 
 ###함수(function)
 
+ function say(name){
+	 console.log(`hello,${name}`);
+ }
+ 
+ say("이름");
+ 
+ 
+ function showError(){
+	 alert('에러가발생했습니다');
+ }
+ showError();
+ 
+ 함수로 만들면 유지보수가 쉬워지고 여러군데에서 사용이 가능하다.
+
+ function sayHello(name){
+	 let msg = `hello`;
+	 if(name){
+		 msg +=','+name;
+	 }
+ }
+ sayHello();
+ 매개변수를 넣어서 함수를 실행할수있다..
+ let은 지역변수라서 함수 안에서만 사용이가능하다
+ 만약에 밖에서 쓰고싶다면 변수를 함수 밖으로 빼서 선언해야한다.. 이것을 전역변수라고한다. 
+
+let newName = name || 'friend';
+이렇게 쓰면 name에 아무런 매개변수가 없다면 friend가 나온다. 
+
+
+function sayHello(name ='friend'){
+}
+이렇게 지정한다면 name에 default값은 friend가 된다. 
+
+반환은 return 을 사용한다...
+
+
+### 함수 표현식 화살표함수
+
+
  -->
+ 
+ <script>
+ 
+
+
+ 
+ 
+ 
+ 
+ </script>
 
 </body>
 </html>
