--- a/WebContent/jsBasic/00_jsBasic.html
+++ b/WebContent/jsBasic/00_jsBasic.html
@@ -234,10 +234,23 @@ let sayHello = nam => `Hello, ${name}`;
 
 
 ### 객체
+const superman ={
+name :'clark',
+age: 33,
+}
 
+접근
+superman.name
+superman['age']
 
+추가
+superman.gender ='male';
+superman['haircolor'] ='black';
 
+삭제
+delete superman.haircolor;
 
+단축프로퍼티
 
  -->
  
