--- a/WebContent/jsBasic/00_jsBasic.html
+++ b/WebContent/jsBasic/00_jsBasic.html
@@ -244,6 +244,18 @@ superman['haircolor'] ='black';
 delete superman.haircolor;
 
 단축프로퍼티
+더 간단하게 객체 작성가능
+
+존재하지 않는 프로퍼티에 접근하면 undefined가 뜸
+'age' in superman
+객체가 잇는지 확인
+
+fop(let key in superman){
+  console.log(key)
+  console.log(sperman[key])
+}
+
+
 
  -->
  
